bad/assign_binop_nne_string.example_compiler_output
ERROR
[1mbad/assign_binop_nne_string.lat:4:15: [1;31merror: [0;1mleft side is not assignable[m
	null != null = "";
	             [1;32m^[m
[1mbad/assign_binop_nne_string.lat:4:2: [1;34mnote: [0;1mleft side starts here[m
	null != null = "";
	[1;32m^[m
